--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,17 @@
 a.active hr{
   display: block;
 }
+@keyframes slide-in {
+  0%{
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100%{
+    transform: translateX(0);
+    opacity: 1;
+  }
+  
+}
+.animate-slide-in{
+  animation: slide-in 0.4s ease-out;
+}
